deploy/infrastructure/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yas-keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0 # Phiên bản ổn định
        args: ["start-dev"] # Chạy chế độ phát triển để đơn giản hóa cấu hình
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30014 # Cổng để bạn truy cập trang quản trị Keycloak
